--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,74 +3,53 @@ apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
 /**
- * This is the configuration block to customize your React Native Android app.
- * By default you don't need to apply any configuration, just uncomment the lines you need.
+ * Configurazione React Native per l'app Android.
+ * Usiamo il plugin ufficiale "com.facebook.react".
  */
 react {
-    /* Folders */
-    //   The root of your project, i.e. where "package.json" lives. Default is '../..'
-    // root = file("../../")
-    //   The folder where the react-native NPM package is. Default is ../../node_modules/react-native
-    // reactNativeDir = file("../../node_modules/react-native")
-    //   The folder where the react-native Codegen package is. Default is ../../node_modules/@react-native/codegen
-    // codegenDir = file("../../node_modules/@react-native/codegen")
-    //   The cli.js file which is the React Native CLI entrypoint. Default is ../../node_modules/react-native/cli.js
-    // cliFile = file("../../node_modules/react-native/cli.js")
-
-    /* Variants */
-    //   The list of variants to that are debuggable. For those we're going to
-    //   skip the bundling of the JS bundle and the assets. By default is just 'debug'.
-    //   If you add flavors like lite, prod, etc. you'll have to list your debuggableVariants.
-    // debuggableVariants = ["liteDebug", "prodDebug"]
-
-    /* Bundling */
-    //   A list containing the node command and its flags. Default is just 'node'.
-    // nodeExecutableAndArgs = ["node"]
-    //
-    //   The command to run when bundling. By default is 'bundle'
-    // bundleCommand = "ram-bundle"
-    //
-    //   The path to the CLI configuration file. Default is empty.
-    // bundleConfig = file(../rn-cli.config.js)
-    //
-    //   The name of the generated asset file containing your JS bundle
-    // bundleAssetName = "MyApplication.android.bundle"
-    //
-    //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
-    // entryFile = file("../js/MyApplication.android.js")
-    //
-    //   A list of extra flags to pass to the 'bundle' commands.
-    //   See https://github.com/react-native-community/cli/blob/main/docs/commands.md#bundle
-    // extraPackagerArgs = []
-
-    /* Hermes Commands */
-    //   The hermes compiler command to run. By default it is 'hermesc'
-    // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
-    //
-    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
-    // hermesFlags = ["-O", "-output-source-map"]
-
     /* Autolinking */
     autolinkLibrariesWithApp()
 }
 
 /**
- * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
+ * Disabilitiamo esplicitamente HERMES per questa app.
+ * In questo modo React Native userà JSC come motore JS.
+ */
+project.ext.react = [
+        enableHermes: false
+]
+
+/**
+ * Proguard solo sulle build release (per ora disattivato).
  */
 def enableProguardInReleaseBuilds = false
 
 /**
- * The preferred build flavor of JavaScriptCore (JSC)
- *
- * For example, to use the international variant, you can use:
- * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
- *
- * The international variant includes ICU i18n library and necessary data
- * allowing to use e.g. `Date.toLocaleString` and `String.localeCompare` that
- * give correct results when using with locales other than en-US. Note that
- * this variant is about 6MiB larger per architecture than default.
+ * Motore JavaScript: usiamo JSC classico, NON Hermes.
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
+
+/**
+ * --------------------------------------------------
+ * Caricamento credenziali firma RELEASE
+ * --------------------------------------------------
+ * Preferito: android/keystore.properties (NON committare)
+ *
+ * Contenuto previsto:
+ * storeFile=../keystores/voiceguideairlink-upload.jks
+ * storePassword=...
+ * keyAlias=voiceguideairlink
+ * keyPassword=...
+ *
+ * Fallback: variabili ambiente
+ * ANDROID_KEYSTORE_FILE, ANDROID_KEYSTORE_PASSWORD,
+ * ANDROID_KEY_ALIAS, ANDROID_KEY_PASSWORD
+ */
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     ndkVersion rootProject.ext.ndkVersion
@@ -78,13 +57,24 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace "com.voiceguideairlinkbare"
+
     defaultConfig {
+        // ✅ ID definitivo per Google Play
         applicationId "com.voiceguideairlinkbare"
+
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+
+        // 🔁 Incrementare ad ogni upload su Play
+        versionCode 4
+        versionName "1.0.3"
+
+        // 🔽 FORZIAMO SOLO ARM64 PER DIMAGRIRE L'APK
+        ndk {
+            abiFilters "arm64-v8a"
+        }
     }
+
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -92,15 +82,34 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            // ✅ Non hardcodiamo password nel repo.
+            // Usa keystore.properties oppure ENV.
+            def sf = keystoreProperties['storeFile'] ?: System.getenv("ANDROID_KEYSTORE_FILE")
+            def sp = keystoreProperties['storePassword'] ?: System.getenv("ANDROID_KEYSTORE_PASSWORD")
+            def ka = keystoreProperties['keyAlias'] ?: System.getenv("ANDROID_KEY_ALIAS")
+            def kp = keystoreProperties['keyPassword'] ?: System.getenv("ANDROID_KEY_PASSWORD")
+
+            if (sf != null && sp != null && ka != null && kp != null) {
+                storeFile file(sf)
+                storePassword sp
+                keyAlias ka
+                keyPassword kp
+            }
+        }
     }
+
     buildTypes {
         debug {
+            // ✅ debug separato: com.voiceguideairlinkbare.dev
+            applicationIdSuffix ".dev"
             signingConfig signingConfigs.debug
         }
+
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            // ✅ release firmata con keystore di upload
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -108,12 +117,9 @@ android {
 }
 
 dependencies {
-    // The version of react-native is set by the React Native Gradle Plugin
+    // Versione di react-android gestita dal plugin React Native
     implementation("com.facebook.react:react-android")
 
-    if (hermesEnabled.toBoolean()) {
-        implementation("com.facebook.react:hermes-android")
-    } else {
-        implementation jscFlavor
-    }
+    // ✅ FORZIAMO JSC, NIENTE HERMES
+    implementation jscFlavor
 }
