--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,39 +1,23 @@
 # Project-wide Gradle settings.
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+# JVM settings for Gradle Daemon
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+# AndroidX
 android.useAndroidX=true
+android.enableJetifier=true
 
-# Use this property to specify which architecture you want to build.
-# You can also override it from the CLI using
-# ./gradlew <task> -PreactNativeArchitectures=x86_64
-reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
+# Architectures to build
+reactNativeArchitectures=arm64-v8a
 
-# Use this property to enable support to the new architecture.
-# This will allow you to use TurboModules and the Fabric render in
-# your application. You should enable this flag either if you want
-# to write custom TurboModules/Fabric components OR use libraries that
-# are providing them.
-newArchEnabled=true
+# New Architecture SPENTA (evitiamo crash con feature flags)
+newArchEnabled=false
 
-# Use this property to enable or disable the Hermes JS engine.
-# If set to false, you will be using JSC instead.
-hermesEnabled=true
+# Hermes SPENTO (necessario per evitare crash libhermes.so)
+hermesEnabled=false
+
+# ? Keystore di release VoiceGuide AirLink
+VG_RELEASE_STORE_FILE=voiceguideairlink-release-key.jks
+VG_RELEASE_KEY_ALIAS=voiceguideairlink
+VG_RELEASE_STORE_PASSWORD=AlessandraCossu72!
+VG_RELEASE_KEY_PASSWORD=AlessandraCossu72!
